// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the storeBriefInCSV function Saving the first record in the csv file 1`] = `
"hash,prefix,suffix,type,size,filePath,bodyOffsetStartIndex,bodyOffsetEndIndex
test111111111111,te,st111111111111,blob,1,test_object,34,100,
"
`;

exports[`Test the storeBriefInCSV function Saving the second record in the csv file 1`] = `
"hash,prefix,suffix,type,size,filePath,bodyOffsetStartIndex,bodyOffsetEndIndex
test111111111111,te,st111111111111,blob,1,test_object,34,100,
test222222222222,te,st222222222222,blob,2,test_object2,13,100,
"
`;
